2008-04-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/zzz.R (.onUnload): add ..dynam.unload()ing

2008-02-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date, Version): 1.11.10 and release

2007-12-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/pam.c (cstat, dark): move variable declarations to local context.
	(bswap): add a few R_CheckUserInterrupt() calls

	* R/pam.q (pam): new argument 'do.swap = TRUE'.  Setting it to
	FALSE allows to skip the more expensive "SWAP" phase.
	* man/pam.Rd: (ditto)

2007-12-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/ind_2.h (ind_2): for m := max(i,j) > 46342, (m-2)*(m-1) give
	integer overflow which leads to a seg.fault.  Now fixed.
	* src/pam.c (bswap): slightly improve trace output.
	* tests/pam.R, tests/pam.Rout.save: corresponding slight adaptions.

	* man/pam.Rd: "large" and
	* man/clara.Rd: "small" datasets; pam() works with thousands ...

	* R/clara.q (clara): error out when users try clara(<dist>, ...).

2007-09-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date, Version): 1.11.9

	* man/pam.Rd: in invisible example, do not use partially matched [[.

2007-09-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/mona.f (mona): dummy initializations for "-Wall"
	* src/fanny.c (fygur): dummy init 'lang'

2007-08-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/daisy.f et al: de-tabify the fortran sources

2007-06-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.11.7  (mainly for R-devel)

2007-06-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/plot.diana.Rd, etc: s/dendrogramm/dendrogram/

2007-05-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/plantTraits.Rd: add \encoding{latin1}

2007-04-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.11.6 - needed
	for R version >= 2.6.0.

	* R/daisy.q (daisy): for 2-valued variables only warn about