@@ -1,6 +1,6 @@
 Package: cluster
 Version: 1.11.11
-Date: 2008-04-..
+Date: 2008-06-14
 Priority: recommended
 Author: Martin Maechler, based on S original by Peter Rousseeuw <rousse@uia.ua.ac.be>,
 	Anja.Struyf@uia.ua.ac.be and Mia.Hubert@uia.ua.ac.be,
